2007-05-06  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/functional/admin/login_controller_test.rb (Admin::test_logout)
	(Admin::test_authenticate__fail, Admin::test_authenticate)
	(Admin::test_login_index): move from login_controller_test.

	* donrails/test/functional/admin/comment_controller_test.rb (Admin::test_delete_comment)
	(Admin::test_manage_comment): move from login_controller_test.

	* donrails/test/functional/admin/trackback_controller_test.rb (Admin::test_delete_trackback)
	(Admin::test_manage_trackback): move from login_controller_test.

	* donrails/test/functional/admin/picture_controller_test.rb (Admin::test_picture_save)
	(Admin::test_delete_picture_2, Admin::test_delete_picture_1)
	(Admin::test_delete_picture, Admin::test_edit_picture_4)
	(Admin::test_edit_picture_3, Admin::test_edit_picture_2)
	(Admin::test_edit_picture_1, Admin::test_edit_picture)
	(Admin::test_manage_picture_detail_1)
	(Admin::test_manage_picture_detail)
	(Admin::test_manage_picture_1, Admin::test_manage_picture): move from login_controller_test.

	* donrails/test/functional/admin/category_controller_test.rb (Admin::test_delete_category_1)
	(Admin::test_delete_category, Admin::test_add_category_1)
	(Admin::test_add_category, Admin::test_manage_category_1)
	(Admin::test_manage_category): move from login_controller_test.

	* donrails/test/functional/admin/article_controller_test.rb (Admin::test_form_article)
	(Admin::test_fix_article, Admin::test_fix_article__1)
	(Admin::test_add_article, Admin::test_manage_article)
	(Admin::test_delete_article)
	(Admin::test_delete_article__issue33, Admin::test_new_article)
	(Admin::test_new_article_1): move from login_controller_test.

	* donrails/test/functional/admin/enrollment_controller_test.rb (Admin::test_manage_enrollment)
	(Admin::test_delete_enrollment): move from login_controller_test.

	* donrails/test/functional/admin/banlist_controller_test.rb (Admin::test_test_banlist)